--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/cptniglo/atiwva#readme",
   "dependencies": {
     "actions-on-google": "^1.8.0",
+    "express": "^4.16.2",
     "mysql": "^2.15.0"
   }
 }
